feat: thêm sound cho game fix: lỗi render khi esc